--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,2 +1,9 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+
+
+RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf
+
+EXPOSE 8080
+
+USER 1001
