--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -2,7 +2,11 @@
 FROM quay.io/redhattraining/httpd-parent
 
 
+
 RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf
+
+RUN chgrp -R 0 /var/log/httpd /var/run/httpd \
+ && chown -R g=u /var/log/httpd /var/run/httpd
 
 EXPOSE 8080
 
