--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,6 +1,7 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
 
+LABEL io.openshift.expose-services="8080:http"
 
 
 RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf
